corpus/directives.txt
==================
Empty template
==================
---
(template)

==================
Content one line
==================
Lorem ipsum
---
(template
  (content))

==================
Content two line
==================
Lorem ipsum 1
Lorem ipsum 2
---
(template
  (content))

==================
Content with curly brace
==================
Lorem { ipsum
---
(template
  (content))

==================
Content with closed curly brace
==================
Lorem } ipsum
---
(template
  (content))

==================
Content with 2 curly brace
==================
Lorem { ipsum }
---
(template
  (content))

==================
Comment single line
==================
{# сomment #}
---
(template
  (comment))

==================
Comment multi line
==================
{# note: disabled template because we no longer use this
  {% for user in users %}
    ...
  {% endfor %}
#}
---
(template
  (comment))

==================
Сontent сomment content
==================
Lorem {# сomment #} ipsum
---
(template
  (content)
  (comment)
  (content))

==================
Comment content  Comment
==================
{# сomment #} Lorem  {# сomment #}
---
(template
  (comment)
  (content)
  (comment))

==================
Inline comments
==================
{{
    # this is an inline comment
    "Hello World"|upper
    # this is an inline comment
}}
---
(template
  (output
    (inline_comment)
    (filter_expression
      (string)
      (function))
    (inline_comment)))

==================
Inline comments 2
==================
{{
    {
        # this is an inline comment
        fruit: 'apple', # this is an inline comment
        color: 'red', # this is an inline comment
    }|join(', ')
}}
---
(template
  (output
    (filter_expression
      (object
        (inline_comment)
        (pair
          (variable)
          (string))
        (inline_comment)
        (pair
          (variable)
          (string))
        (inline_comment))
      (function)
      (arguments
        (string)))))

==================
Output directive
==================
{{ user }}
---
(template
  (output
    (variable)))

==================
Output directive with content
==================
Lorem ipsum {{ user }} Lorem ipsum
---
(template
  (content)
  (output
    (variable))
  (content))

==================
Output directive with  multiline content
==================
Lorem ipsum
{{ user }}
Lorem ipsum
---
(template
  (content)
  (output
    (variable))
  (content))


==================
Statements
==================
{% set value = 42 %}
---
(template
  (set
    (variable)
    (number)))

==================
Statements with content
==================
Lorem ipsum {% set value = 42 %} dolor sit amet
---
(template
  (content)
  (set
    (variable)
    (number))
  (content))

==================
Statements with multiline content
==================
Lorem ipsum
{% set value = 42 %}
dolor sit amet
---
(template
  (content)
  (set
    (variable)
    (number))
  (content))
