corpus/expressions.txt
==================
Identifier
==================
{{ user }}
---
(template
  (output
    (variable)))

==================
Assignment expression
==================
{{ b = 1 + 3 }}
---
(template
  (output
    (assignment_expression
      (variable)
      (binary_expression
        (number)
        (number)))))

==================
Null
==================
{{ null }}
---
(template
  (output
    (null)))

==================
None
==================
{{ none }}
---
(template
  (output
    (null)))

==================
Interger
==================
{{ 42 }}
---
(template
  (output
    (number)))

==================
Float
==================
{{ 42.35 }}
---
(template
  (output
    (number)))

==================
True
==================
{{ true }}
---
(template
  (output
    (boolean)))

==================
False
==================
{{ false }}
---
(template
  (output
    (boolean)))

==================
String
==================
{{ 'hello' }}
---
(template
  (output
    (string)))

==================
String interpolation
==================
{{ "foo #{ 43 } #{ bar } baz" }}
---
(template
  (output
    (interpolated_string
      (string)
      (number)
      (string)
      (variable)
      (string))))

==================
String interpolation deeper
==================
{{ "foo #{"foo #{bar} baz"} baz" }}
---
(template
  (output
    (interpolated_string
      (string)
      (interpolated_string
        (string)
        (variable)
        (string))
      (string))))

==================
String interpolation escaped character
==================
{{ "foo \#{} \" \n" }}
---
(template
  (output
    (string)))

==================
String interpolation few lines
==================
{{ "#{41}" }}
{{ "#{42} #{43}" }}
---
(template
  (output
    (interpolated_string
      (number)))
  (output
    (interpolated_string
      (number)
      (string)
      (number))))

==================
Array empty
==================
{{ [] }}
---
(template
  (output
    (array)))

==================
Array
==================
{{ [1, 2, 'foo', "bar"] }}
---
(template
  (output
    (array
      (number)
      (number)
      (string)
      (string))))

==================
Array with end comma
==================
{{ [1, 2,] }}
---
(template
  (output
    (array
      (number)
      (number))))

==================
Array with spread element
==================
{{ [1, 2, ...moreNumbers] }}
---
(template
  (output
    (array
      (number)
      (number)
      (spread_element
        (variable)))))

==================
Array with omitted element
==================
{{ [, value] }}
---
(template
  (output
    (array
      (omitted)
      (variable))))

==================
Spread operator expand the arguments of a function call
==================
{{ 'Hello %s %s!'|format(...['Fabien', 'Potencier']) }}
---
(template
  (output
    (filter_expression
      (string)
      (function)
      (arguments
        (spread_element
          (array
            (string)
            (string)))))))

==================
Object empty
==================
{{ {} }}
---
(template
  (output
    (object)))

==================
Object
==================
{{ {'foo': 'bar'} }}
---
(template
  (output
    (object
      (pair
        (string)
        (string)))))

==================
Object property keys as names
==================
{{ { foo: 'foo', bar: 'bar' } }}
---
(template
  (output
    (object
      (pair
        (variable)
        (string))
      (pair
        (variable)
        (string)))))

==================
Object property keys as integer
==================
{{ { 2: 'foo', 4: 'bar' } }}
---
(template
  (output
    (object
      (pair
        (number)
        (string))
      (pair
        (number)
        (string)))))

==================
Object property as the variable name
==================
{{ { foo } }}
---
(template
  (output
    (object
      (variable))))

==================
Object parentheses property
==================
{{ { (foo): 'foo' } }}
---
(template
  (output
    (object
      (pair
        (computed_property_name
          (variable))
        (string)))))

==================
Object with spread element
==================
{{ { 'foo': 10, ...moreRatings } }}
---
(template
  (output
    (object
      (pair
        (string)
        (number))
      (spread_element
        (variable)))))

==================
Arrow function with arguments
==================
{{ (a, b) => 42 }}
---
(template
  (output
    (arrow_function
      (parameter)
      (parameter)
      (number))))

==================
Arrow function without arguments
==================
{{ () => 42 }}
---
(template
  (output
    (arrow_function
      (number))))

==================
Arrow function single argument
==================
{{ v => 42 }}
---
(template
  (output
    (arrow_function
      (parameter)
      (number))))

==================
Parenthesized expression
==================
{{ (42) }}
---
(template
  (output
    (parenthesized_expression
      (number))))

==================
Member expression
==================
{{ user.name }}
---
(template
  (output
    (member_expression
      (variable)
      (property))))

==================
Member expression index
==================
{{ arr.0 }}
---
(template
  (output
    (member_expression
      (variable)
      (property))))

==================
Member expression deeper
==================
{{ user.name.first }}
---
(template
  (output
    (member_expression
      (member_expression
        (variable)
        (property))
      (property))))

==================
Member expression dynamic property access
==================
{{ user.('first-name') }}
---
(template
  (output
    (member_expression
      (variable)
      (property
        (string)))))

==================
Member expression dynamic property access 2
==================
{{ user.('get' ~ name) }}
---
(template
  (output
    (member_expression
      (variable)
      (property
        (binary_expression
          (string)
          (variable))))))

==================
Member expression dynamic property access 3
==================
{{ enum('App\\CardSuite').(case_name) }}
---
(template
  (output
    (member_expression
      (call_expression
        (function)
        (arguments
          (string)))
      (property
        (variable)))))

==================
Member expression with null-safe operator
==================
{{ user?.name }}
---
(template
  (output
    (member_expression
      (variable)
      (property))))

==================
Member expression index  with null-safe operator
==================
{{ arr?.0 }}
---
(template
  (output
    (member_expression
      (variable)
      (property))))

==================
Member expression deeper  with null-safe operator
==================
{{ user?.name?.first }}
---
(template
  (output
    (member_expression
      (member_expression
        (variable)
        (property))
      (property))))

==================
Member expression dynamic property access  with null-safe operator
==================
{{ user?.('first-name') }}
---
(template
  (output
    (member_expression
      (variable)
      (property
        (string)))))

==================
Member expression dynamic property access  with null-safe operator 2
==================
{{ user?.('get' ~ name) }}
---
(template
  (output
    (member_expression
      (variable)
      (property
        (binary_expression
          (string)
          (variable))))))

==================
Subscript expression
==================
{{ user['name'] }}
---
(template
  (output
    (subscript_expression
      (variable)
      (string))))

==================
Subscript expression slice
==================
{{ '123456'[1:2] }}
{{ '123456'[:-2] }}
{{ [1,2,3][2:] }}
{{ [1,2,3][:] }}
---
(template
  (output
    (subscript_expression
      (string)
      (slice
        (number)
        (number))))
  (output
    (subscript_expression
      (string)
      (slice
        (unary_expression
          (number)))))
  (output
    (subscript_expression
      (array
        (number)
        (number)
        (number))
      (slice
        (number))))
  (output
    (subscript_expression
      (array
        (number)
        (number)
        (number))
      (slice))))

==================
Subscript expression deeper
==================
{{ user['name'][prop] }}
---
(template
  (output
    (subscript_expression
      (subscript_expression
        (variable)
        (string))
      (variable))))

==================
Call expression without arguments
==================
{{ range() }}
---
(template
  (output
    (call_expression
      (function)
      (arguments))))

==================
Call call expression
==================
{{ range()() }}
---
(template
  (output
    (call_expression
      (call_expression
        (function)
        (arguments))
      (arguments))))

==================
Call expression with arguments
==================
{{ range(0, 3) }}
---
(template
  (output
    (call_expression
      (function)
      (arguments
        (number)
        (number)))))

==================
Call expression with one argument
==================
{{ join(',') }}
---
(template
  (output
    (call_expression
      (function)
      (arguments
        (string)))))

==================
Call expression with one named argument
==================
{{ join(splitter=',') }}
---
(template
  (output
    (call_expression
      (function)
      (arguments
        (named_argument
          (string)
          (string))))))

==================
Call expression with dots named argument
==================
{{ join(splitter: ',') }}
---
(template
  (output
    (call_expression
      (function)
      (arguments
        (named_argument
          (string)
          (string))))))

==================
Call expression with named arguments
==================
{{ range(low=1, high=10, step=2) }}
---
(template
  (output
    (call_expression
      (function)
      (arguments
        (named_argument
          (string)
          (number))
        (named_argument
          (string)
          (number))
        (named_argument
          (string)
          (number))))))

==================
Call expression with arguments and named arguments
==================
{{ "now"|date('d/m/Y H:i', timezone="Europe/Paris") }}
---
(template
  (output
    (filter_expression
      (string)
      (function)
      (arguments
        (string)
        (named_argument
          (string)
          (string))))))

==================
Unary expression
==================
{{ -42 }}
---
(template
  (output
    (unary_expression
      (number))))

==================
Binary expression
==================
{{ a + b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary and unary expressions
==================
{{ -42 + a * 'b' }}
---
(template
  (output
    (binary_expression
      (unary_expression
        (number))
      (binary_expression
        (variable)
        (string)))))

==================
Binary: is
==================
{{ name is odd }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: is not
==================
{{ name is not odd }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Ternary operator
==================
{{ foo ? 'yes' : 'no' }}
---
(template
  (output
    (ternary_expression
      (variable)
      (string)
      (string))))

==================
Ternary operator short
==================
{{ foo ?: 'no' }}
---
(template
  (output
    (ternary_expression
      (variable)
      (string))))

==================
Null-coalescing operator
==================
{{ result ?? 'no' }}
---
(template
  (output
    (binary_expression
      (variable)
      (string))))

==================
Filter without arguments
==================
{{ name|title }}
---
(template
  (output
    (filter_expression
      (variable)
      (function))))

==================
Filter with arguments
==================
{{ name|join(', ') }}
---
(template
  (output
    (filter_expression
      (variable)
      (function)
      (arguments
        (string)))))

==================
Filter multiple
==================
{{ name|striptags|title }}
---
(template
  (output
    (filter_expression
      (filter_expression
        (variable)
        (function))
      (function))))

==================
Binary: or
==================
{{ a or b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: and
==================
{{ a and b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: b-or
==================
{{ a b-or b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: b-xor
==================
{{ a b-xor b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: b-and
==================
{{ a b-and b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: ==
==================
{{ a == b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: !=
==================
{{ a != b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: <=>
==================
{{ a <=> b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: <
==================
{{ a < b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: >
==================
{{ a > b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: >=
==================
{{ a >= b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: <=
==================
{{ a <= b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: not in
==================
{{ a not in b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: in
==================
{{ a in b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: matches
==================
{{ a matches '/pattern/' }}
---
(template
  (output
    (binary_expression
      (variable)
      (string))))

==================
Binary: starts with
==================
{{ a starts with 'foo' }}
---
(template
  (output
    (binary_expression
      (variable)
      (string))))

==================
Binary: ends with
==================
{{ a ends with 'bar' }}
---
(template
  (output
    (binary_expression
      (variable)
      (string))))

==================
Binary: has some
==================
{{ a has some b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: has every
==================
{{ a has every b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: ..
==================
{{ 1..5 }}
---
(template
  (output
    (binary_expression
      (number)
      (number))))

==================
Binary: - (subtraction)
==================
{{ a - b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: ~
==================
{{ a ~ b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: * (multiplication)
==================
{{ a * b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: /
==================
{{ a / b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: //
==================
{{ a // b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: %
==================
{{ a % b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: **
==================
{{ a ** b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Unary: + (plus)
==================
{{ +42 }}
---
(template
  (output
    (unary_expression
      (number))))

==================
Unary: not
==================
{{ not a }}
---
(template
  (output
    (unary_expression
      (variable))))

==================
Binary: is defined
==================
{{ a is defined }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: is empty
==================
{{ a is empty }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: is iterable
==================
{{ a is iterable }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: is constant
==================
{{ a is constant }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary: is null
==================
{{ a is null }}
---
(template
  (output
    (binary_expression
      (variable)
      (null))))

==================
Filter: abs
==================
{{ -5|abs }}
---
(template
  (output
    (unary_expression
      argument: (filter_expression
        object: (number)
        name: (function)))))

==================
Filter: capitalize
==================
{{ 'hello'|capitalize }}
---
(template
  (output
    (filter_expression
      object: (string)
      name: (function))))

==================
Function: attribute
==================
{{ attribute(object, 'property') }}
---
(template
  (output
    (call_expression
      name: (function)
      arguments: (arguments
        argument: (variable)
        argument: (string)))))

==================
Function: block
==================
{{ block('title') }}
---
(template
  (output
    (call_expression
      name: (function)
      arguments: (arguments
        argument: (string)))))

==================
Function: constant
==================
{{ constant('PHP_VERSION') }}
---
(template
  (output
    (call_expression
      name: (function)
      arguments: (arguments
        argument: (string)))))

==================
Filter: trim
==================
{{ '  hello  '|trim }}
---
(template
  (output
    (filter_expression
      object: (string)
      name: (function))))

==================
Filter: length
==================
{{ 'hello'|length }}
---
(template
  (output
    (filter_expression
      object: (string)
      name: (function))))

==================
Filter: batch
==================
{{ [1,2,3,4,5]|batch(2) }}
---
(template
  (output
    (filter_expression
      object: (array
        (number)
        (number)
        (number)
        (number)
        (number))
      name: (function)
      arguments: (arguments
        argument: (number)))))

==================
Filter: date
==================
{{ '2023-01-01'|date('Y-m-d') }}
---
(template
  (output
    (filter_expression
      object: (string)
      name: (function)
      arguments: (arguments
        argument: (string)))))

==================
Filter: escape
==================
{{ 'string'|escape('html') }}
---
(template
  (output
    (filter_expression
      object: (string)
      name: (function)
      arguments: (arguments
        argument: (string)))))

==================
Filter: lower
==================
{{ 'STRING'|lower }}
---
(template
  (output
    (filter_expression
      object: (string)
      name: (function))))

==================
Filter: upper
==================
{{ 'string'|upper }}
---
(template
  (output
    (filter_expression
      object: (string)
      name: (function))))

==================
Filter: replace
==================
{{ 'hello'|replace({'l': 'p'}) }}
---
(template
  (output
    (filter_expression
      object: (string)
      name: (function)
      arguments: (arguments
        argument: (object
          (pair
            key: (string)
            value: (string)))))))

==================
Function: cycle
==================
{{ cycle(['odd', 'even'], 3) }}
---
(template
  (output
    (call_expression
      name: (function)
      arguments: (arguments
        argument: (array
          (string)
          (string))
        argument: (number)))))

==================
Function: dump
==================
{{ dump(var) }}
---
(template
  (output
    (call_expression
      name: (function)
      arguments: (arguments
        argument: (variable)))))

==================
Function: include
==================
{{ include('template.html.twig') }}
---
(template
  (output
    (call_expression
      name: (function)
      arguments: (arguments
        argument: (string)))))

==================
Function: max
==================
{{ max(1, 3, 2) }}
---
(template
  (output
    (call_expression
      name: (function)
      arguments: (arguments
        argument: (number)
        argument: (number)
        argument: (number)))))

==================
Function: min
==================
{{ min(1, 3, 2) }}
---
(template
  (output
    (call_expression
      name: (function)
      arguments: (arguments
        argument: (number)
        argument: (number)
        argument: (number)))))

==================
Function: parent
==================
{{ parent() }}
---
(template
  (output
    (call_expression
      name: (function)
      arguments: (arguments))))

==================
Function: random
==================
{{ random(5) }}
---
(template
  (output
    (call_expression
      name: (function)
      arguments: (arguments
        argument: (number)))))

==================
Function: range
==================
{{ range(1, 10) }}
---
(template
  (output
    (call_expression
      name: (function)
      arguments: (arguments
        argument: (number)
        argument: (number)))))

==================
Function: source
==================
{{ source('file.txt') }}
---
(template
  (output
    (call_expression
      name: (function)
      arguments: (arguments
        argument: (string)))))

==================
Function: template_from_string
==================
{{ template_from_string('Hello {{ name }}') }}
---
(template
  (output
    (call_expression
      name: (function)
      arguments: (arguments
        argument: (string)))))

==================
Global variable: _context
==================
{{ _context }}
---
(template
  (output
    (variable)))

==================
Global variable: _self
==================
{{ _self }}
---
(template
  (output
    (variable)))

==================
Global variable: _charset
==================
{{ _charset }}
---
(template
  (output
    (variable)))

==================
Global variable: _self.templateName
==================
{{ _self.templateName }}
---
(template
  (output
    (member_expression
      (variable)
      (property))))
